--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Pijamas premium para toda la familia | Suaves, modernas y seguras</title>
-  <meta name="description" content="Pijamas suaves y premium para familia, mujer y niños. Envíos rápidos, pagos seguros y cambios fáciles. Promoción por tiempo limitado.">
+  <meta name="description" content="Pijamas suaves y premium para familia, mujer y niños. Envíos rápidos, pagos seguros y con garantía. Promoción por tiempo limitado.">
 
   <!-- Open Graph -->
   <meta property="og:title" content="Pijamas premium para toda la familia" />
@@ -41,8 +41,7 @@
   <header class="header" role="banner">
     <div class="container header__inner">
       <a href="#" class="header__brand" aria-label="Inicio">
-        <span class="header__logo" aria-hidden="true">PJ</span>
-        <span class="header__brand-text">TuPijama</span>
+        <span class="header__brand-text">Boutique Rosetta</span>
       </a>
       <nav class="header__nav" aria-label="Navegación principal">
         <a class="header__link" href="#coleccion">Colección</a>
@@ -67,7 +66,7 @@
           </div>
         </div>
         <div class="hero__image-wrapper">
-          <img class="hero__image" src="./assets/images/familia1.jpg" alt="Familia usando pijamas rosas suaves" loading="eager" />
+          <img class="hero__image" src="./assets/images/familia1.jpg" alt="Familia usando pijamas" loading="eager" />
         </div>
       </div>
     </section>
@@ -94,7 +93,7 @@
     <section id="promos" class="promo" aria-labelledby="promo-title">
       <div class="container promo__inner">
         <div class="promo__content">
-          <h2 id="promo-title" class="section-title">¡Semana Rosa! 20% OFF</h2>
+          <h2 id="promo-title" class="section-title">¡Semana Boutique! 20% OFF</h2>
           <p class="promo__text">Solo por tiempo limitado. Renueva tus sueños con confort.</p>
           <div class="promo__countdown" aria-live="polite">
             <div id="promo-countdown" class="countdown" role="timer" aria-label="Tiempo restante de la promoción"></div>
@@ -115,7 +114,7 @@
           <article class="benefit">
             <img class="benefit__icon" src="./assets/icons/envio.svg" alt="" aria-hidden="true" loading="lazy" />
             <h3 class="benefit__title">Envíos rápidos</h3>
-            <p class="benefit__text">Recibe tus pijamas en tiempo récord.</p>
+            <p class="benefit__text">Recibe tus pijamas con seguridad y rapidez.</p>
           </article>
           <article class="benefit">
             <img class="benefit__icon" src="./assets/icons/pagos.svg" alt="" aria-hidden="true" loading="lazy" />
@@ -139,7 +138,7 @@
     <!-- 5) Testimonios -->
     <section id="testimonios" class="testimonials" aria-labelledby="testimonials-title">
       <div class="container">
-        <h2 id="testimonials-title" class="section-title">Lo que dicen nuestras clientas</h2>
+        <h2 id="testimonials-title" class="section-title">Lo que dicen nuestr@s clientas</h2>
         <div id="testimonials-list" class="grid grid--testimonials" aria-live="polite" aria-busy="false">
           <!-- Render dinámico (JS) -->
         </div>
@@ -150,16 +149,16 @@
     <section id="contacto" class="contact" aria-labelledby="contact-title">
       <div class="container contact__inner">
         <div class="contact__info">
-          <h2 id="contact-title" class="section-title">Contáctanos</h2>
+          <h2 id="contact-title" class="section-title">Contáctanos</h2>         
           <p class="contact__text">¿Tienes preguntas? Estamos aquí para ayudarte.</p>
           <ul class="contact__list">
             <li class="contact__item">
               <strong>Celular:</strong>
-              <a class="contact__link" href="tel:+573000000000" aria-label="Llamar al +57 300 000 0000">+57 300 000 0000</a>
+              <a class="contact__link" href="tel:+573125847042" aria-label="Llamar al +57 312 584 7042">+57 312 584 7042</a>
             </li>
             <li class="contact__item">
               <strong>Email:</strong>
-              <a class="contact__link" href="mailto:contacto@tupijama.com" aria-label="Enviar correo a contacto@tupijama.com">contacto@tupijama.com</a>
+              <a class="contact__link" href="boutiquerosetta@tupijama.com" aria-label="Enviar correo a boutiquerosetta@tupijama.com">boutiquerosetta@tupijama.com</a>
             </li>
           </ul>
 
@@ -173,6 +172,11 @@
             <a class="social__btn" href="https://www.tiktok.com/" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
               <img src="./assets/icons/tiktok.svg" alt="" aria-hidden="true" />
             </a>
+            <a class="social__btn"
+              href="https://wa.me/573125847042?text=Hola%2C%20Boutique%20Rosetta%2C%20me%20gustar%C3%ADa%20obtener%20m%C3%A1s%20informaci%C3%B3n."
+     target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
+    <img src="./assets/icons/whatsapp.svg" alt="" aria-hidden="true" />
+  </a>
           </div>
         </div>
 
@@ -207,15 +211,15 @@
   <!-- Footer -->
   <footer class="footer" role="contentinfo">
     <div class="container footer__inner">
-      <p class="footer__copy">© <span id="year"></span> TuPijama. Confort y estilo.</p>
+      <p class="footer__copy">© <span id="year"></span> BoutiqueRosetta. Confort y estilo.</p>
       <div class="social">
-        <a class="social__btn" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+        <a class="social__btn" href="https://www.facebook.com/share/1CQgMN33iq/" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
           <img src="./assets/icons/facebook.svg" alt="" aria-hidden="true" />
         </a>
-        <a class="social__btn" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+        <a class="social__btn" href="https://www.instagram.com/boutiquerosetta_alexa?igsh=N3l5bnh6eTYyOG1v" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
           <img src="./assets/icons/instagram.svg" alt="" aria-hidden="true" />
         </a>
-        <a class="social__btn" href="https://www.tiktok.com/" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
+        <a class="social__btn" href="https://www.tiktok.com/@boutiquerosetta1?_r=1&_t=ZS-942VulTqCKz" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
           <img src="./assets/icons/tiktok.svg" alt="" aria-hidden="true" />
         </a>
       </div>
