Update email contact link in index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </li>
             <li class="contact__item">
               <strong>Email:</strong>
-              <a class="contact__link" href="boutiquerosetta@tupijama.com" aria-label="Enviar correo a boutiquerosetta@tupijama.com">boutiquerosetta@tupijama.com</a>
+              <a class="contact__link" href="boutiquerosetta01@gmail.com" aria-label="Enviar correo a boutiquerosetta01@gmail.com">boutiquerosetta01@gmail.com</a>
             </li>
           </ul>
 
