Change email link to 'mailto' format
Updated email link to use 'mailto' with subject and body.

--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
               <a class="contact__link" href="tel:+573125847042" aria-label="Llamar al +57 312 584 7042">+57 312 584 7042</a>
             </li>
             <li class="contact__item">
-              <strong>Email:</strong>
-              <a class="contact__link" href="boutiquerosetta01@gmail.com" aria-label="Enviar correo a boutiquerosetta01@gmail.com">boutiquerosetta01@gmail.com</a>
+              <strong>Email:</strong>         
+                <a class="contact__link" href="mailto:boutiquerosetta01@gmail.com?subject=Boutique%20Rosetta%20-%20Consulta&body=Hola%2C%20me%20gustar%C3%ADa%20m%C3%A1s%20informaci%C3%B3n%20sobre%20las%20pijamas." aria-label="Enviar correo a Boutique Rosetta"> boutiquerosetta01@gmail.com </a>
+``
             </li>
           </ul>
 
